--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <artifactId>addon-parent</artifactId>
     <groupId>org.homio.addon</groupId>
-    <version>1.2.8</version>
+    <version>1.2.9-SNAPSHOT</version>
   </parent>
 
   <version>1.0.0</version>
